# Leaktracer

./: leak-analyze-addr2line  read.md
app/: build.gradle
app/src/androidTest/java/com/tuya/myapplication/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/tuya/myapplication/: LeakManager.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/tuya/myapplication/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
